@@ -7,26 +7,29 @@
     <parent>
         <groupId>uk.gov.justice</groupId>
         <artifactId>maven-super-pom</artifactId>
-        <version>17.0.0</version>
+        <version>21.0.0-M1</version>
     </parent>
 
     <artifactId>maven-parent-pom</artifactId>
-    <version>17.103.1-SNAPSHOT</version>
+    <version>21.0.0-M1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <properties>
+        <!-- Default argLine - can be overridden by JaCoCo or other agents -->
+        <argLine></argLine>
+
         <!-- Minimum version of Maven required to build the project -->
         <maven.minimum.version>3.3.9</maven.minimum.version>
 
         <!-- Enforcer settings - ranges need to be in the format defined at http://maven.apache.org/enforcer/enforcer-rules/versionRanges.html -->
         <enforcer.maven.version.range>[${maven.minimum.version},)</enforcer.maven.version.range>
-        <enforcer.java.version.range>[17,)</enforcer.java.version.range>
+        <enforcer.java.version.range>[21,)</enforcer.java.version.range>
 
 
         <!-- Java API versions targeted -->
-        <java.major.version>17</java.major.version>
-        <java.ee.version>8</java.ee.version>
-        <javaee-api.version>8.0.1</javaee-api.version>
+        <java.major.version>21</java.major.version>
+        <java.ee.version>10</java.ee.version>
+        <javaee-api.version>10.0.0</javaee-api.version>
 
         <!-- Compilation properties -->
         <compiler.debug>true</compiler.debug>
@@ -51,7 +54,7 @@
         <plugins.maven.site.version>3.6</plugins.maven.site.version>
         <plugins.maven.javadoc.version>2.10.4</plugins.maven.javadoc.version>
         <plugins.maven.source.version>3.0.1</plugins.maven.source.version>
-        <plugins.maven-plugin-plugin.version>3.7.1</plugins.maven-plugin-plugin.version>
+        <plugins.maven-plugin-plugin.version>3.9.0</plugins.maven-plugin-plugin.version>
 
         <plugins.maven.wagon.version>2.10</plugins.maven.wagon.version>
         <plugins.maven.war.version>3.1.0</plugins.maven.war.version>
@@ -77,7 +80,7 @@
         </javadoc.javaee.link>
         <javadoc.javamail.link>http://javamail.kenai.com/nonav/javadocs/</javadoc.javamail.link>
 
-        <plugins.jacoco.version>0.8.8</plugins.jacoco.version>
+        <plugins.jacoco.version>0.8.12</plugins.jacoco.version>
 
         <h2.version>2.3.232</h2.version>
         <hibernate.version>4.3.11.Final</hibernate.version>
@@ -93,6 +96,21 @@
         <jaxb.version>2.3.1</jaxb.version>
 
         <cpp.repo.name>maven-parent-pom</cpp.repo.name>
+
+        <!-- Jakarta/javax dependency versions used in plugin dependency blocks -->
+        <glassfish-json.version>2.0.1</glassfish-json.version>
+        <glassfish-javax-json.version>1.1.4</glassfish-javax-json.version>
+        <jackson-datatype-jakarta-jsonp.version>2.14.2</jackson-datatype-jakarta-jsonp.version>
+        <jakarta.annotation-api.version>2.1.1</jakarta.annotation-api.version>
+        <jakarta.inject-api.version>2.0.1</jakarta.inject-api.version>
+        <jakarta.jms-api.version>3.1.0</jakarta.jms-api.version>
+        <jakarta.xml.bind-api.version>4.0.0</jakarta.xml.bind-api.version>
+        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+        <javax.persistence-api.version>2.2</javax.persistence-api.version>
+        <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
+        <jee.api.version>10.0.0</jee.api.version>
+        <parsson.version>1.1.0</parsson.version>
+        <persistence-api.version>3.1.0</persistence-api.version>
     </properties>
 
     <scm>
@@ -131,21 +149,6 @@
         </plugins>
     </reporting>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>com.h2database</groupId>
-                <artifactId>h2</artifactId>
-                <version>${h2.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.liquibase</groupId>
-                <artifactId>liquibase-core</artifactId>
-                <version>${liquibase.version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <build>
         <resources>
             <resource>
@@ -179,6 +182,7 @@
                     <version>${plugins.maven.surefire.version}</version>
                     <configuration>
                         <useSystemClassLoader>false</useSystemClassLoader>
+                        <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
                     </configuration>
                 </plugin>
 
@@ -392,7 +396,7 @@
                     <artifactId>maven-war-plugin</artifactId>
                     <version>${plugins.maven.war.version}</version>
                     <configuration>
-                        <packagingExcludes>WEB-INF/web.xml</packagingExcludes>
+                        <packagingExcludes>WEB-INF/web.xml,WEB-INF/lib/resteasy-*.jar</packagingExcludes>
                         <!-- Java EE 7 doesn't require web.xml, Maven needs to catch up! -->
                         <failOnMissingWebXml>false</failOnMissingWebXml>
                         <archive>
@@ -486,8 +490,8 @@
                     <version>${plugins.coveralls.version}</version>
                     <dependencies>
                         <dependency>
-                            <groupId>javax.xml.bind</groupId>
-                            <artifactId>jaxb-api</artifactId>
+                            <groupId>jakarta.xml.bind</groupId>
+                            <artifactId>jakarta.xml.bind-api</artifactId>
                             <version>${jaxb.version}</version>
                         </dependency>
                     </dependencies>
